--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -1,4 +1,12 @@
 // Then include the following
+@import "variable";
 @import 'bootstrap/scss/bootstrap.scss';
 @import 'bootstrap-vue/src/index.scss';
 @import "material-icons/iconfont/material-icons.css";
+
+body, html{
+    position: relative;
+    height: 100%;
+    width: 100%;
+    background:#f5f7fb;
+}
